config-root/namespaces/jx/jxboot-helmfile-resources/700-chartmuseum-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: chartmuseum
  namespace: jx
spec:
  rules:
  - host: chartmuseum.34.76.100.223.nip.io
    http:
      paths:
      - backend:
          serviceName: jenkins-x-chartmuseum
          servicePort: 8080
status:
  loadBalancer: {}
