config-root/namespaces/jx/jxboot-helmfile-resources/700-hook-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: hook
  namespace: jx
spec:
  rules:
  - host: hook.34.76.100.223.nip.io
    http:
      paths:
      - backend:
          serviceName: hook
          servicePort: 80
  tls:
  - hosts:
    - hook.34.76.100.223.nip.io
    secretName: tls-cluster-local-s
status:
  loadBalancer: {}
