config-root/namespaces/jx/jxboot-helmfile-resources/700-nexus-ing.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: nexus
  namespace: jx
spec:
  rules:
  - host: nexus.34.76.100.223.nip.io
    http:
      paths:
      - backend:
          serviceName: nexus
          servicePort: 80
status:
  loadBalancer: {}
